--- a/app/src/main/res/layout/trailer_detail.xml
+++ b/app/src/main/res/layout/trailer_detail.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pacific Rim Uprising"
+        android:text="Coming Soon"
         android:textColor="@color/white_full"
         android:textSize="14sp"
         android:layout_gravity="right"/>
