--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -39,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="cursive"
-                    android:text="7.4"
+                    android:text="8.0"
                     android:textColor="@color/icons"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -62,7 +62,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="4dp"
             android:layout_toRightOf="@id/fl_img"
-            android:text="Pacifc Rim"
+            android:text="Naruto"
             android:textColor="@color/primary_text"
             android:textSize="16sp" />
 
@@ -73,7 +73,6 @@
             android:layout_alignLeft="@id/tv_movie_title"
             android:layout_below="@id/tv_movie_title"
             android:layout_marginTop="8dp"
-            android:fontFamily="sans-serif-condensed"
             android:text="( Action , Science Fiction )"
             android:textColor="@color/primary_text"
             android:textSize="14dp"
@@ -86,8 +85,7 @@
             android:layout_alignLeft="@id/tv_movie_title"
             android:layout_below="@id/tv_movie_type"
             android:layout_marginTop="8dp"
-            android:fontFamily="serif"
-            android:text="Current Popularity"
+            android:text="24/7"
             android:textColor="@color/primary_text"
             android:textSize="14sp" />
 
@@ -101,7 +99,7 @@
             android:layout_marginTop="4dp"
             android:isIndicator="true"
             android:numStars="5"
-            android:rating="4"
+            android:rating="3"
             android:progressTint="@color/rating"/>
 
         <Button
