--- a/app/src/main/res/drawable/rounded_border.xml
+++ b/app/src/main/res/drawable/rounded_border.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- <solid android:color="add your color here"/>-->
-    <solid android:color="@color/primary"/>
+    <solid android:color="@color/colorPrimary"/>
     <stroke
         android:color="#FFFFFF"
         android:width="0dp"/>
