--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
+    <color name="accent">#2196F3</color>
+    <color name="primary">#2196F3</color>
+    <color name="primary_dark">#1976D2</color>
 
     <color name="icon_fullscreen_bg">#33000000</color>
     <color name="rating">#f9e217</color>
