--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:id="@+id/cv_movies_items_root"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardElevation="4dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
     <RelativeLayout
@@ -77,7 +73,7 @@
             android:layout_alignLeft="@id/tv_movie_title"
             android:layout_below="@id/tv_movie_title"
             android:layout_marginTop="8dp"
-            android:text="( Action )"
+            android:text="( Action , Science Fiction )"
             android:textColor="@color/primary_text"
             android:textSize="14dp"
             android:textStyle="bold" />
@@ -124,4 +120,4 @@
             android:textSize="14sp" />
     </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
