--- a/app/src/main/res/layout/trailer_detail.xml
+++ b/app/src/main/res/layout/trailer_detail.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-    android:layout_width="250dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/black_full"
-    android:layout_marginLeft="8dp">
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,22 +14,20 @@
         android:textColor="@color/white_full"
         android:textSize="14sp"
         android:layout_gravity="right"/>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/img_dummy_trailer" />
-
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/ic_play_circle_outline_black_24dp"
             android:layout_gravity="center"/>
+
+        <ImageView
+            android:layout_width="240dp"
+            android:layout_height="120dp"
+            android:src="@drawable/img_dummy_trailer" />
     </FrameLayout>
     <TextView
         android:layout_width="wrap_content"
